fix-scrollBar

--- a/src/components/Admin/Admin.scss
+++ b/src/components/Admin/Admin.scss
@@ -16,6 +16,7 @@
         }
 
         .admin-main {
+            height: calc(100vh - 40px);
             .user-pagination {
                 display: flex;
                 justify-content: center;
