--- a/src/components/Admin/Content/Quiz/ManageQuiz.scss
+++ b/src/components/Admin/Content/Quiz/ManageQuiz.scss
@@ -7,7 +7,8 @@
     legend{
         font-size: 13px;
     }
-    .list-detail{
+    .list-detail
+    {
         padding: 15px;
     }
 }
